src/test/ui/borrowck/borrowck-move-out-of-vec-tail.nll.stderr
error[E0508]: cannot move out of type `[Foo]`, a non-copy slice
  --> $DIR/borrowck-move-out-of-vec-tail.rs:29:19
   |
LL |             match tail {
   |                   ^^^^ cannot move out of here
LL |                 &[Foo { string: a },
   |                                 - data moved here
...
LL |                   Foo { string: b }] => {
   |                                 - ...and here
   |
note: move occurs because these variables have types that don't implement the `Copy` trait
  --> $DIR/borrowck-move-out-of-vec-tail.rs:30:33
   |
LL |                 &[Foo { string: a },
   |                                 ^
...
LL |                   Foo { string: b }] => {
   |                                 ^
help: consider removing the `&`
   |
LL |                 [Foo { string: a },
LL |                 //~^ ERROR cannot move out of type `[Foo]`
LL |                 //~| cannot move out
LL |                 //~| to prevent move
LL |                   Foo { string: b }] => {
   |

error[E0507]: cannot move out of `tail[..].string` which is behind a `&` reference
  --> $DIR/borrowck-move-out-of-vec-tail.rs:30:33
   |
LL |         [_, ref tail..] => {
   |             -------- help: consider changing this to be a mutable reference: `ref mut tail`
LL |             match tail {
LL |                 &[Foo { string: a },
   |                                 ^
   |                                 |
   |                                 cannot move out of `tail[..].string` which is behind a `&` reference
   |                                 `tail` is a `&` reference, so the data it refers to cannot be moved

error[E0507]: cannot move out of `tail[..].string` which is behind a `&` reference
  --> $DIR/borrowck-move-out-of-vec-tail.rs:34:33
   |
LL |         [_, ref tail..] => {
   |             -------- help: consider changing this to be a mutable reference: `ref mut tail`
...
LL |                   Foo { string: b }] => {
   |                                 ^
   |                                 |
   |                                 cannot move out of `tail[..].string` which is behind a `&` reference
   |                                 `tail` is a `&` reference, so the data it refers to cannot be moved

error: aborting due to 3 previous errors

Some errors occurred: E0507, E0508.
For more information about an error, try `rustc --explain E0507`.
